# transcript-vibevoice-onnx

./: .aiignore  .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: validate.yml
artifacts/: benchmark_report.json  validation_report.json
scripts/: benchmark.py  export_acoustic.py  export_semantic.py  status.py  upload_onnx.py  validate_numerical.py
tests/: Cargo.toml
tests/src/: main.rs
