[project]
name = "transcript-vibevoice-onnx"
version = "0.1.0"
description = "Demo — ONNX export of VibeVoice-ASR audio tokenizers and Rust ort inference"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
    # Core — model and inference
    "torch>=2.2.0",
    "transformers>=5.3.0",
    "accelerate>=0.27.0",
    "huggingface_hub>=0.23.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.20.0",
    "onnxscript>=0.1.0",
    # Audio
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    # Reporting
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]