[package]
name    = "vibevoice-ort-test"
version = "0.1.0"
edition = "2021"
description = "Spike — Validation runtime ort (Rust) pour les tokenizers ONNX VibeVoice-ASR"

[[bin]]
name = "validate"
path = "src/main.rs"

[dependencies]
# ONNX Runtime — binding officiel Rust
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

# Tensors
ndarray = { version = "0.15", features = ["rayon"] }

# Sérialisation des résultats
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Async (pour les futurs tests candle)
tokio = { version = "1", features = ["full"] }

# Erreurs
anyhow  = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1